<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScannerFolder.Affichage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/label_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/label_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

            <TextView
                android:id="@+id/description"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundstyle"
                android:layout_gravity="center"
                android:padding="50dp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"/>

        <ImageView
            android:id="@+id/affichageqr"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundqr"
            android:layout_gravity="center"
            android:padding="150dp">
        </ImageView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/access"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:text="@string/acceder"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="50dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            app:icon="@drawable/access"
            app:iconPadding="50dp"
            app:iconTint="@color/black"
            app:iconGravity="textEnd"
            app:iconSize="50dp"/>



</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>