<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayFolder.Display">

    <LinearLayout
        android:id="@+id/theBigOne"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-39dp">

        <TextView
            android:id="@+id/label_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nom"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/label_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/roundstyle"
            android:gravity="start|top"
            android:padding="50dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/affichageqr"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:scaleType="fitXY">
        </ImageView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/access"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/acceder"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="50dp"
            app:icon="@drawable/access"
            app:iconGravity="textEnd"
            app:iconPadding="50dp"
            app:iconSize="50dp"
            app:iconTint="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="50dp"
                app:icon="@drawable/retour"
                app:iconPadding="10dp"
                app:iconSize="50dp"
                app:iconTint="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:text="@string/telecharger"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="50dp"
                app:icon="@drawable/telecharger"
                app:iconGravity="textEnd"
                app:iconPadding="10dp"
                app:iconSize="50dp"
                app:iconTint="@color/black" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>