<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/theBigOne"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/Blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="70">

            <TextView
                android:id="@+id/info_created_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginVertical="5dp"/>

            <TextView
                android:id="@+id/info_edit_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginVertical="5dp"/>
        </LinearLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:gravity="top|right">

            <ImageButton
                android:id="@+id/icon_class"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/delete_round_button"
                android:src="@drawable/supprimer"/>
        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="22dp">


        <TextView
            android:id="@+id/label_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/field_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="5dp"
            android:inputType="text"
            android:background="@color/white"
            android:layout_marginBottom="40dp"
            android:hint="@string/entrer_le_nom_ici"/>

        <TextView
            android:id="@+id/label_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/field_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="5dp"
            android:inputType="text"
            android:background="@color/white"
            android:layout_marginBottom="40dp"
            android:hint="@string/entrer_l_url_ici"/>

        <TextView
            android:id="@+id/label_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/field_desc"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:textSize="20sp"
            android:padding="5dp"
            android:inputType="textMultiLine"
            android:gravity="start"
            android:background="@color/white"
            android:layout_marginBottom="40dp"
            android:hint="@string/entrer_la_description_ici"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/but_return"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:backgroundTint="@color/white"
                android:layout_marginRight="10dp"
                app:cornerRadius="50dp"
                app:icon="@drawable/retour"
                app:iconTint="@color/black"
                app:iconGravity="textEnd"
                app:iconSize="50dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/but_update"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="80"
                android:text="Modifier"
                android:textSize="20sp"
                android:textStyle="bold"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                app:cornerRadius="50dp"
                app:icon="@drawable/edit"
                app:iconPadding="50dp"
                app:iconTint="@color/black"
                app:iconGravity="textEnd"
                app:iconSize="50dp"/>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>