<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryFolder.History">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent"
        android:orientation="vertical"
        style="@style/Theme.UQAC_Scanner.Historique">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autofillHints="@string/search"
            android:hint="@string/search"
            android:inputType="text"
            tools:ignore="LabelFor"
            android:background="@color/white"
            android:padding="5dp"/>

        <ListView
            android:id="@+id/history_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:background="@color/white"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <RadioGroup
                android:id="@+id/filterHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_track"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/created_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_tumb"
                    android:button="@null"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/created"
                    android:textColor="@color/black"/>
                <RadioButton
                    android:id="@+id/scanned_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_tumb"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/scanned"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>
            </RadioGroup>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>